# learning-with-label-proportions

./: .gitignore  CMakeLists.txt  README.md
include/llp/Algorithms/: ContinuousClusterLabeler.h  GreedyBinaryClusterLabeler.h  GreedyBinaryClusterLabelerParameters.h  InstanceClustering.h  KMeansClusteringParameters.h  KMeansInstanceClusterer.h  KMeansWeightedDistanceInstanceClusterer.h
include/llp/Algorithms/Trainers/: CMSTrainer.h  CMSTrainerParameters.h
include/llp/Distances/: EarthMoversDistance.h  Hausdorff.h  WeightedEarthMoversDistance.h  WeightedEarthMoversDistance2.h  WeightedNxMDistance.h
include/llp/Losses/: CeresCostFunction.h  CeresCostFunction2.h  IntervalLosses.h  IntervalRisk.h  ScalarLosses.h  ScalarRisk.h
include/llp/Models/: BaseModel.h  CMSModel.h  ClusterModel.h
include/llp/Tracers/: FileTracer.h  SilentTracer.h  StdOutTracer.h
include/llp/Util/: MatrixOperations.h
test/: CMSModelTest.cxx  CMSTrainerTest.cxx  CMakeLists.txt  CoOccurenceMatrixTest.cxx  GreedyBinaryClusterLabelerTest.cxx  InstanceClusteringTest.cxx  IntervalLossesTest.cxx  IntervalRiskTest.cxx  KMeansWeightedDistanceInstanceClustererTest.cxx  RandomMatrixTest.cxx  WeightedNxMDistanceTest.cxx
tools/: CMakeLists.txt  PredictClusterModel.cxx  TrainClusterModel.cxx  TrainClusterModelContinuous.cxx
